--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+---
+# Matéria da frente diz a Jekyll para processar Liquid.
+---
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -5,6 +9,6 @@
     <title>Home</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
+    <h1>{{ "Hello World!" | downcase }}</h1>
   </body>
 </html>
