--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 ---
-# Matéria da frente diz a Jekyll para processar Liquid.
+title: Home
 ---
-
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Home</title>
+    <title>{{ page.title }}</title>
   </head>
   <body>
     <h1>{{ "Hello World!" | downcase }}</h1>
