--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ background: '/img/bg-index.jpg'
 ================================================== -->
 {% if page.url == "/" %}
 <div class="hero-banner">
-  <img src="{{ site.baseurl }}/assets/images/banner-dados.png" alt="Banner sobre dados e programação">
+  <img src="{{ site.baseurl }}/assets/images/banner.png" alt="Banner sobre dados e programação">
 </div>
 {% endif %}
 
