Upgarde estrutura, margens e cards

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ background: '/img/bg-index.jpg'
 
 <!-- Posts List with Sidebar (except featured)
 ================================================== -->
+<!-- Posts List with Sidebar (except featured)
+================================================== -->
 <section class="row">
   <div class="col-sm-8">
     <div class="row">
@@ -51,3 +53,4 @@ background: '/img/bg-index.jpg'
     {% include sidebar.html %}
   </div>
 </section>
+
